[package]
name = "spindrift"
version = "0.1.0"
authors = ["Zach Hart <zthart96@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.122", features = ["derive"] }
serde_yaml = "0.8.15"
chrono = "0.4.19"