[package]
name = "spindrift"
version = "0.1.0"
authors = ["Zach Hart <zthart96@gmail.com>"]
edition = "2018"
description = "A simple static site generator - probably best if you didn't use it, it's not very good"
repository = "https://github.com/zthart/spindrift"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tera = "1.15"
clap = { version = "3.1", features = ["derive"] }
serde = { version = "1.0.122", features = ["derive"] }
serde_yaml = "0.8.15"
chrono = { version = "0.4.19", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
regex = "1.0"
lazy_static = "1.4.0"
